src/app/snapshots/jiq__app__app_render__snapshot_tests__snapshot_ui_with_array_data.snap
---
source: src/app/app_render.rs
expression: output
---
"┌ Stream [3] ──────────────────────────────────────────────────────────────────┐"
"│"Alice"                                                                       │"
"│"Bob"                                                                         │"
"│"Charlie"                                                                     │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Query [INSERT] ─────────────────────────────── Press Ctrl+A for AI Assistant ┐"
"│.[].name                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" F1: Help | Shift+Tab: Switch Pane | ↑/Ctrl+R: History | Enter: Output Result | "
